--- a/web/themes/custom/forsythbiome/scss/layout/_header.scss
+++ b/web/themes/custom/forsythbiome/scss/layout/_header.scss
@@ -26,6 +26,11 @@ header {
         padding-top: 8px;
       }
     }
+
+    #main-menu-container {
+      width: 100%;
+      float: left;
+    }
   }
 
 }
