--- a/web/themes/custom/forsythbiome/templates/modules/topbanner.html.twig
+++ b/web/themes/custom/forsythbiome/templates/modules/topbanner.html.twig
@@ -6,38 +6,43 @@
 
 {# { dump() } #}
 
-{% if is_front %}
-  <div class="top-banner">
-    <div class="top-banner-wrapper">
+      {# Display the Foundation top_bar if it exists #}
+{#      {% if top_bar %}#}
+{#        {{ top_bar }}#}
+{#      {% endif %}#}
+
+      {# Forsyth Site Header Twig Block #}
+{#      {% block xy_siteheader %}#}
+{#        {% set alt_header = FALSE %}#}
+
+<div class="top-banner">
+  <div class="top-banner-wrapper">
+
+    {% if is_front %}
       <!--<img class="full-width" src="/sites/default/files/images/hero/2018-03/forsyth_mmmn_home-1200x657.jpg" title="MyMouth, MyNose" alt="boy with magnifying glass">-->
-      <img class="full-width" src="{{ public_files }}/images/hero/2018-03/forsyth_mmmn_home-1200x657.jpg" title="MyMouth, MyNose" alt="boy with magnifying glass">
-      <div class="overlay"></div>
+{#      <img class="full-width" src="{{ public_files }}/images/hero/2018-03/forsyth_mmmn_home-1200x657.jpg" title="MyMouth, MyNose" alt="boy with magnifying glass">#}
+{#      <div class="overlay"></div>#}
       <div class="top-banner-content">
 
         <div class="grid-container">
           <div class="grid-x grid-margin-x grid-margin-y">
-            <div class="cell small-12 medium-4 top-banner-details">
-              <p>As you read this, millions of microbes can be found in and on your body – not just as idle passengers, but also active participants in your health. What are they doing? What kinds of microbes are there? And how can we harness these “bugs” to fend off disease and keep our bodies healthy?</p>
-            </div>
+{#            <div class="cell small-12 medium-4 top-banner-details">#}
+{#              <p>As you read this, millions of microbes can be found in and on your body – not just as idle passengers, but also active participants in your health. What are they doing? What kinds of microbes are there? And how can we harness these “bugs” to fend off disease and keep our bodies healthy?</p>#}
+{#            </div>#}
           </div>
           <div class="grid-x grid-margin-x grid-margin-y">
-            <div class="cell small-12 medium-5 top-banner-cta">
-              <h2>The Forsyth Institute is exploring these questions – and we need your help!</h2>
-            </div>
+{#            <div class="cell small-12 medium-5 top-banner-cta">#}
+{#              <h2>The Forsyth Institute is exploring these questions – and we need your help!</h2>#}
+{#            </div>#}
           </div>
           <div class="grid-x grid-margin-x grid-margin-y">
-            <div class="cell small-12 medium-4 top-banner-btn">
-              <a class="button large" href="{{ path('user.register') }}">{{ 'Sign Up'|t }}</a>
-            </div>
+{#            <div class="cell small-12 medium-4 top-banner-btn">#}
+{#              <a class="button large" href="{{ path('user.register') }}">{{ 'Sign Up'|t }}</a>#}
+{#            </div>#}
           </div>
         </div>
-
       </div>
-    </div>
-  </div>
-{% else %}
-  <div class="top-banner">
-    <div class="top-banner-wrapper">
+    {% else %}
       <div class="top-banner-content">
         <div class="grid-container">
           <div class="grid-x grid-margin-x grid-margin-y">
@@ -46,6 +51,8 @@
           </div>
         </div>
       </div>
-    </div>
+    {% endif %}
+
+{# Close out the top-banner and top-banner-wrapper divs#}
   </div>
-{% endif %}
+</div>
