Updates after Prototype Presentation.

--- a/web/themes/custom/forsythbiome/scss/_settings.scss
+++ b/web/themes/custom/forsythbiome/scss/_settings.scss
@@ -70,7 +70,7 @@
 
 $forsyth-palette: (
     forsyth-red: #e32726,
-    forsyth-grey: #92989E,
+    forsyth-grey: #92989E, //#f1f1f1 from PSD for gray background
     forsyth-ltblue: #8AC9ED,
     forsyth-blue: #4097DB,
     forsyth-green: #73C92D,
@@ -130,13 +130,14 @@ $print-transparent-backgrounds: true;
 
 $breakpoints: (
   small: 0,
-  medium: 640px,
+  xsmall: 380px,
+  medium: 740px,
   large: 1024px,
   xlarge: 1200px,
   xxlarge: 1440px,
 );
 $print-breakpoint: large;
-$breakpoint-classes: (small medium large);
+$breakpoint-classes: (small xsmall medium large xlarge);
 
 // 3. The Grid
 // -----------
@@ -158,7 +159,8 @@ $header-font-family: $body-font-family;
 $header-font-weight: $global-weight-normal;
 $header-font-style: normal;
 $font-family-monospace: Consolas, 'Liberation Mono', Courier, monospace;
-$header-color: inherit;
+//$header-color: inherit;
+$header-color: #e32726;
 $header-lineheight: 1.4;
 $header-margin-bottom: 0.5rem;
 $header-styles: (
@@ -171,10 +173,10 @@ $header-styles: (
     'h6': ('font-size': 16),
   ),
   medium: (
-    'h1': ('font-size': 48),
-    'h2': ('font-size': 40),
-    'h3': ('font-size': 31),
-    'h4': ('font-size': 25),
+    'h1': ('font-size': 36),
+    'h2': ('font-size': 33),
+    'h3': ('font-size': 30),
+    'h4': ('font-size': 24),
     'h5': ('font-size': 20),
     'h6': ('font-size': 16),
   ),
@@ -412,12 +414,12 @@ $dropdown-sizes: (
 // 18. Dropdown Menu
 // -----------------
 
-$dropdownmenu-arrows: true;
+$dropdownmenu-arrows: false;
 $dropdownmenu-arrow-color: $anchor-color;
 $dropdownmenu-arrow-size: 6px;
 $dropdownmenu-arrow-padding: 1.5rem;
 $dropdownmenu-min-width: 200px;
-$dropdownmenu-background: $white;
+$dropdownmenu-background: #FFAC2A;
 $dropdownmenu-submenu-background: $dropdownmenu-background;
 $dropdownmenu-padding: $global-menu-padding;
 $dropdownmenu-nested-margin: 0;
