--- a/web/themes/custom/forsythbiome/scss/layout/_footer.scss
+++ b/web/themes/custom/forsythbiome/scss/layout/_footer.scss
@@ -3,4 +3,10 @@
 footer {
   background-color: get-color(forsyth-grey);
   padding: 20px 0;
+
+  .menu {
+    a {
+      color: white;
+    }
+  }
 }
